# jn-ByteTrack-CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/ByteTrack/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h  dataType.h  kalmanFilter.cpp  kalmanFilter.h  lapjv.cpp  utils.cpp
test/: main.cpp  test_utils.cpp  test_utils.h
